[package]
name = "fac"
description = "Quickly generate average colours for your images (WASM)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.24.2"
reqwest = "0.11.10"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
