[package]
name = "icons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
dunce = "1.0.2"
image = { version = "0.24.2", default-features = false, features = ["png"] }
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[target.'cfg(debug)'.dependencies.anyhow]
version = "1.0.57"
features = ["backtrace"]